--- a/templates/posts/opinion.html
+++ b/templates/posts/opinion.html
@@ -12,7 +12,7 @@
   <div class="content-block-center-write" title="Написать в ленту">
     <span>Написать в ленту {{ typetype }}</span>
   </div>
-  {% include "includes/add_post.html" %}
+  {% include "includes/add_post_opinion.html" %}
 </div>{% endif %}{% endblock %}
 {% block content %}
   {% if user.is_authenticated %}
