--- a/templates/account/agreement.html
+++ b/templates/account/agreement.html
@@ -5,10 +5,9 @@
     <!-- Центральная колонка -->
     <div class="content-block-center">
         <div class="title-holder">
-            <h3>Правила сайта</h3>
+            <h3>Регламент - пользовательское соглашение</h3>
         </div>
         {{ content|safe }}
-            <p><strong>Правила пользования сайтом </strong><a href="https://vrachivmeste.ru/"><strong>www.vrachivmeste.ru</strong></a></p>
             <p><strong>Регламент</strong></p>
             <p><strong>1. Основные термины и определения</strong></p>
             <p><strong>Администрация Сайта (Администрация) Врачи Вместе</strong> &ndash; лица, осуществляющие управление Порталом и иные действия, связанные с его использованием и действующие в соответствии&nbsp; с законодательством Российской Федерации.</p>
