--- a/templates/account/forms/registerformstep1.html
+++ b/templates/account/forms/registerformstep1.html
@@ -29,7 +29,7 @@
 	</div>
 	<div class="bottom">
 
-        <label><input type="checkbox" name="agreed" value="1"/> <a href="/account/agreement">Согласен с правилами</a></label>
+        <label><input type="checkbox" name="agreed" value="1"/> <a href="/account/agreement">Согласен с регламентом - пользовательским соглашением ( в соответствии с законом о персональных данных №152-ФЗ)</a></label>
 
 		<div class="next-holder">
 			<a href="#" class="btn-next" onclick="$(this).closest('form').submit();return false;">Сохранить и продолжить</a>
