--- a/templates/base.html
+++ b/templates/base.html
@@ -286,7 +286,7 @@
           <strong >{% get_all_users_fake %}</strong> врачей <br/>
         </div></div>
         <div id="top-cntr2" class="top-cntr"><div class="content-block-right-anons-item" >
-          <strong >{% count_materials %}</strong> материала
+          <strong >{% count_materials %}</strong> материалов
         </div></div>
         </div>
         <div id="top-btns">
