--- a/templates/groups/groups.html
+++ b/templates/groups/groups.html
@@ -219,7 +219,7 @@
 		</div>
 		<div class="links">
 		{% if user.is_authenticated %}
-			<a class="add-group" href="javascript:void(0)" onClick="JoinAGroup('{{ object.id }}', '/groups/join');">Вступить <br> в группу</a>
+			<a class="add-group" href="javascript:void(0)" onClick="JoinAGroup('{{ object.id }}', 'https://vrachivmeste.ru/groups/join');">Вступить <br> в группу</a>
 		{% endif %}
 		</div>
 	</div>
