--- a/templates/groups/groups.html
+++ b/templates/groups/groups.html
@@ -50,7 +50,7 @@
 		{% endif %}
 				</div>
 				<div class="links">
-					<a class="delete-group" href="javascript:void(0)" onClick="JoinAGroup('{{ object.group_id.id }}', '/groups/unjoin');" style="color:#777777;">Выйти из группы</a>
+					<a class="delete-group" href="javascript:void(0)" onClick="JoinAGroup('{{ object.group_id.id }}', '/groups/unjoin/');" style="color:#777777;">Выйти из группы</a>
 				</div>
 			</div>
 		{% if forloop.last and forloop.counter > 1 %}
@@ -297,16 +297,17 @@ function JoinAGroup(id, url) {
 			//dataType: "html", //Тип данных
 			data: {'id': id}, 
 			success: function(response) { //Если все нормально
-				document.getElementById('group'+id).parentNode.removeChild(document.getElementById('group'+id));
-				if (document.getElementById('toggle-block-slide')) {
-					$("#toggle-block-slide").html(response);
-				}else{
-					$('#info-block-mygroup').removeClass('info-block');
-					$('#info-block-mygroup').addClass('groups-area');
-					//$('#info-block-mygroup').addClass('slide');
-					$("#info-block-mygroup").html(response);
-					//$("#info-block-mygroup").html(response);
-				}
+{#				document.getElementById('group'+id).parentNode.removeChild(document.getElementById('group'+id));#}
+{#				if (document.getElementById('toggle-block-slide')) {#}
+{#					$("#toggle-block-slide").html(response);#}
+{#				}else{#}
+{#					$('#info-block-mygroup').removeClass('info-block');#}
+{#					$('#info-block-mygroup').addClass('groups-area');#}
+{#					//$('#info-block-mygroup').addClass('slide');#}
+{#					$("#info-block-mygroup").html(response);#}
+{#					//$("#info-block-mygroup").html(response);#}
+{#				}#}
+                location.reload();
 			},
 			error: function(response) { //Если ошибка
 				alert('Произошла ошибка. Попробуйте ещё раз'); //document.getElementById('group'+id).innerHTML = "Ошибка при отправке формы";
