--- a/templates/medtus/translation.html
+++ b/templates/medtus/translation.html
@@ -11,6 +11,7 @@
              <input type="hidden" id="object_id" value="{{ object.id }}"/>
         {{ object.data_open|safe }}
           {% else %}
+             {% if not user.is_authenticated %}
            <br /><br /><br/>
         <span class="title">Для просмотра онлайн трансляции войдите на сайт, используя Ваш логин и пароль. </span>
 
@@ -19,6 +20,7 @@
        <span class="title">Если вы не регистрировались ранее на сайте, пройдите регистрацию.</span>
 
      <p class="inform-panel"><a style="float:left;  margin-top:10px;"  class="btn" href="/account/register1/">Регистрация</a></p>
+                {% endif %}
      {% endif %}
             {% if user.is_authenticated %}
                  <br>
