--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
   <script type="text/javascript" src="{% static 'js/dajaxice.core.js' %}" charset="utf-8"></script>
   {% block js_page %}{% endblock %}
   {#{% endcompress %}#}
+<script charset="UTF-8" src="//cdn.sendpulse.com/28edd3380a1c17cf65b137fe96516659/js/push/2f49b6f66aa0025e30475afcaae0395b_1.js" async></script>
 </head>
 <body>
 <div class="page-div inner" {% block page_div_style %}{% endblock %}>
