--- a/templates/base.html
+++ b/templates/base.html
@@ -554,7 +554,7 @@
 
       {#  <!-- Реклама на сайте -->#}
       <div class="content-block-right-reklama">
-        <a href="" target="_parent" title="Реклама на сайте">Реклама на сайте</a><br/>
+        <a href="mailto:tkozlova@calistomedia.ru" title="Реклама на сайте">Реклама на сайте</a><br/>
         <!--LiveInternet counter-->
         <script type="text/javascript"><!--
         document.write("<a href='//www.liveinternet.ru/click' " +
