--- a/templates/posts/one_post2.html
+++ b/templates/posts/one_post2.html
@@ -4,7 +4,7 @@
     <div class="content-block-center-item-head">
 	<div class="content-block-center-item-head-theme-left">
 	<span>
-	{% online %}
+	{% object|online3 %}
 	</span>
 	</div>
         {% if id != '3' %}
